# BigQuerySender

./: .env  .gitignore  Cargo.toml  README.md  abc.json  build.rs
src/: main.rs
src/big_query/: big_query.rs  gcp_credentials.rs  mod.rs
src/consumer/: kafka_consumer.rs
src/model/: model.rs
src/proto/: events.proto  ingestion.proto
src/resources/: application.config
src/util/: config.rs  env_vars.rs  kafka_deserializer.rs  mod.rs  postgres_connection.rs
